// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fn() versus empty package.json 1`] = `
Object {
  "scripts": Object {
    "fmt": "npm run sort-package-json",
    "pretest": "npm run fmt",
    "sort-package-json": "npx -q sort-package-json",
  },
}
`;

exports[`fn() versus package.json with ava and nyc 1`] = `
Object {
  "devDependencies": Object {
    "ava": "*",
    "nyc": "*",
  },
  "scripts": Object {
    "ava": "nyc ava",
    "fmt": "npm run sort-package-json",
    "nyc": "nyc check-coverage",
    "pretest": "npm run fmt",
    "sort-package-json": "npx -q sort-package-json",
  },
}
`;

exports[`fn() versus package.json with ava and pre-existing scripts 1`] = `
Object {
  "devDependencies": Object {
    "ava": "*",
  },
  "scripts": Object {
    "ava": "ava",
    "fmt": "npm run sort-package-json",
    "pretest": "npm run fmt",
    "sort-package-json": "npx -q sort-package-json",
    "test": "true",
  },
}
`;
